# tg-anime

./: .dockerignore  .example.env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
app/: logging.yaml
app/api/: main.py  webhook_router.py
app/bot/: ioc.py  main.py  misc.py
app/bot/common/: uow.py
app/bot/database/: db.py
app/bot/dialogs/menu/: controllers.py  dialog.py
app/bot/filters/: chat_type.py
app/bot/handlers/: arts.py  help.py  start.py
app/bot/middlewares/: anime_art.py
app/bot/models/: base.py  channels.py  fields.py  user.py
app/core/: config.py
app/external_api/: base_api.py  waifu_pics_api.py
app/migrations/: env.py
app/migrations/versions/: 75f5c1f4b9f9_init.py
docker-compose/: postgres.yaml  redis.yaml  tg-anime.yaml  zrok-share.yaml
